--- a/index_online_banking.html
+++ b/index_online_banking.html
@@ -170,12 +170,14 @@
           <div class="container">
             <div class="row align-items-center">
               <div class="col-lg-7">
-                <div class="badge text-uppercase text-primary bg-primary-subtle wow fadeInUp" data-wow-delay=".1s">All-in-one banking for everyone</div>
+                <div class="badge text-uppercase text-primary bg-primary-subtle wow fadeInUp" data-wow-delay=".1s">Fast, secure, and hassle-free money transfers</div>
                 <h1 class="hero_title text-white wow fadeInUp" data-wow-delay=".2s">
-                  The Premier Finto Online Banking
+                  Seamless 
+                  <span>Global</span>
+                  Money Transfers``
                 </h1>
                 <p class="pe-lg-5 text-white wow fadeInUp" data-wow-delay=".3s">
-                  Discover online banking with Synox. Experience unmatched, security, and efficiency for managing your finances.
+                  Free money transfers—so you can focus on what matters most.
                 </p>
                 <ul class="btns_group pb-0 unordered_list justify-content-lg-start wow fadeInUp" data-wow-delay=".4s">
                   <li>
@@ -244,7 +246,7 @@
           </div>
           <div class="container">
             <div class="clients_logo_carousel swiper">
-              <div class="badge text-uppercase text-primary bg-primary-subtle">Some Several Companies</div>
+              <div class="badge text-uppercase text-primary bg-primary-subtle">Trusted Companies</div>
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <div class="image_block border">
