--- a/index_online_banking.html
+++ b/index_online_banking.html
@@ -352,46 +352,46 @@
                 <div class="heading_block style_2 text-center">
                   <div class="badge text-uppercase text-dark bg-dark-subtle">CORE FEATURES</div>
                   <h2 class="heading_text mb-0">
-                    5 Rapid Highlights of Our Synox Solution
+                    4 Highlights of Perryleo's Solution
                   </h2>
                 </div>
               </div>
             </div>
 
             <div class="row online_banking_features">
-              <div class="col-lg-6 col-md-6 col-sm-6">
+              <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="imagebox_block pb-0 bg-primary">
                   <div class="imagebox_content">
                     <div class="imagebox_icon">
                       <img src="assets/images/icons/icon_wallet.svg" alt="Icon Wallet">
                     </div>
                     <h3 class="imagebox_title">
-                      Receive Early Payments Within 24 Hours
+                      Fast Transfers
                     </h3>
                     <p class="mb-0">
-                      Experience the convenience of early payments arriving within just 24 hours. Say goodbye.
+                      Send money in minutes, not days. Our lightning-fast system ensures quick delivery worldwide.
                     </p>
                   </div>
                   <div class="image_block">
-                    <img src="assets/images/features/ob_feature_image_1.webp" alt="Feature Image">
+                    <img src="assets/images/features/ob_feature_image_5.webp" alt="Feature Image">
                   </div>
                 </div>
               </div>
-              <div class="col-lg-6 col-md-6 col-sm-6">
+              <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="imagebox_block pb-0 bg-success">
                   <div class="imagebox_content">
                     <div class="imagebox_icon">
                       <img src="assets/images/icons/icon_chart_2.svg" alt="Icon Chart 2">
                     </div>
                     <h3 class="imagebox_title">
-                      Monitor Your Essential Expenses Wisely
+                      Competitive Exchange Rates
                     </h3>
-                    <p class="mb-0">
-                      Take control of your financial journey by wisely monitoring your essential expenses.
+                    <p class="mb-0">                   
+                      Save more with the best exchange rates and transparent fees—no hidden costs.
                     </p>
                   </div>
                   <div class="image_block pb-4">
-                    <img src="assets/images/features/ob_feature_image_2.webp" alt="Feature Image">
+                    <img src="assets/images/features/ob_feature_image_3.webp" alt="Feature Image">
                   </div>
                 </div>
               </div>
@@ -402,10 +402,11 @@
                       <img src="assets/images/icons/icon_global_search.svg" alt="Icon Global Search">
                     </div>
                     <h3 class="imagebox_title">
-                      Send Money Anywhere, Anytime to here
+                      Global Reach
                     </h3>
                     <p class="mb-0">
-                      Send money to any destination, anytime, and from anywhere.
+                      Transfer money to over 100 countries with multiple payout options, including bank deposits,
+                       cash pickup, and mobile wallets.
                     </p>
                   </div>
                   <div class="image_block pb-4">
@@ -413,24 +414,25 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 col-sm-6">
+              <!-- <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="imagebox_block pb-0 bg-light">
                   <div class="imagebox_content">
                     <div class="imagebox_icon">
                       <img src="assets/images/icons/icon_color_swatch.svg" alt="Icon Color Swatch">
                     </div>
                     <h3 class="imagebox_title">
-                      Virtual or physical - it’s your choice
+                      Global Reach
                     </h3>
                     <p class="mb-0">
-                      Choice the convenience of virtual options the choice is yours.
+                      Transfer money to over 100 countries with multiple payout options, including bank deposits,
+                       cash pickup, and mobile wallets.
                     </p>
                   </div>
                   <div class="image_block">
                     <img src="assets/images/features/ob_feature_image_4.webp" alt="Feature Image">
                   </div>
                 </div>
-              </div>
+              </div> -->
               <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="imagebox_block pb-0 bg-info">
                   <div class="imagebox_content">
@@ -438,10 +440,10 @@
                       <img src="assets/images/icons/icon_bitcoin.svg" alt="Icon Bitcoin">
                     </div>
                     <h3 class="imagebox_title">
-                      B2B & Cryptocurrency Payment System
+                      Secure & Reliable
                     </h3>
                     <p class="mb-0">
-                      Streamline B2B payments with cryptocurrency integration.
+                      We use top-tier encryption and compliance standards to keep your transactions safe.
                     </p>
                   </div>
                   <div class="image_block pt-3">
@@ -464,10 +466,11 @@
                 <div class="heading_block style_2">
                   <div class="badge text-uppercase text-dark bg-dark-subtle">Who we are</div>
                   <h2 class="heading_text">
-                    Shaping Your Future with Online Banking
+                    We are redefining the way busy professionals send and receive money globally.
                   </h2>
                   <p class="heading_description mb-0">
-                    Embark on a journey towards a brighter financial future with our online  banking services. From managing accounts to convenient bill payments,  our platform is designed to empower.
+                    With a seamless user experience, top-tier security, and instant transactions, we make transferring
+                     money simple—so you can focus on what matters most.
                   </p>
                 </div>
                 <div class="row online_banking_funfact">
