--- a/index_online_banking.html
+++ b/index_online_banking.html
@@ -373,7 +373,7 @@
                     </p>
                   </div>
                   <div class="image_block">
-                    <img src="assets/images/features/ob_feature_image_5.webp" alt="Feature Image">
+                    <img src="assets/images/mobile_app_image.webp" alt="Feature Image">
                   </div>
                 </div>
               </div>
@@ -410,7 +410,7 @@
                     </p>
                   </div>
                   <div class="image_block pb-4">
-                    <img src="assets/images/features/ob_feature_image_3.webp" alt="Feature Image">
+                    <img src="assets/images/ob-screen-2.jpg" alt="Feature Image">
                   </div>
                 </div>
               </div>
@@ -447,7 +447,7 @@
                     </p>
                   </div>
                   <div class="image_block pt-3">
-                    <img src="assets/images/features/ob_feature_image_5.webp" alt="Feature Image">
+                    <img src="assets/images/bvn-val.png" alt="Feature Image">
                   </div>
                 </div>
               </div>
@@ -509,12 +509,12 @@
                 <ul class="about_image_2 unordered_list justify-content-center">
                   <li>
                     <div class="image_block">
-                      <img src="assets/images/about/about_image_1.webp" alt="About Image 1">
+                      <img src="assets/images/ob-screen-one.png" alt="About Image 1">
                     </div>
                   </li>
                   <li>
                     <div class="image_block">
-                      <img src="assets/images/about/about_image_2.webp" alt="About Image 2">
+                      <img src="assets/images/wallet.png" alt="About Image 2">
                     </div>
                     <ul class="avatars_group unordered_list justify-content-center">
                       <li>
@@ -533,7 +533,7 @@
                   </li>
                   <li>
                     <div class="image_block">
-                      <img src="assets/images/about/about_image_3.webp" alt="About Image 3">
+                      <img src="assets/images/transactions_card_image_2.webp" alt="About Image 3">
                     </div>
                   </li>
                 </ul>
@@ -549,14 +549,14 @@
         <section class="video_section section_space pb-0 bg-light">
           <div class="container">
             <div class="heading_block style_2 text-center">
-              <div class="badge text-uppercase text-dark bg-dark-subtle">Meet our new</div>
+              <div class="badge text-uppercase text-dark bg-dark-subtle">Who we are</div>
               <h2 class="heading_text mb-0">
-                Physical Card for Your Pocket
+                We are redefining the way busy professionals send and receive money globally.
               </h2>
             </div>
 
             <div class="video_block position-relative">
-              <img src="assets/images/about/about_video_image_1.webp" alt="About Video Image">
+              <img src="assets/images/about_video_image_1.webp" alt="About Video Image">
               <a class="video_btn" href="https://www.youtube.com/watch?v=7e90gBu4pas">
                 <span class="btn_icon">
                   <i class="fa-solid fa-play"></i>
@@ -575,14 +575,14 @@
             <div class="heading_block style_2">
               <div class="row align-items-lg-end justify-content-lg-between">
                 <div class="col-lg-6">
-                  <div class="badge text-uppercase text-dark bg-dark-subtle">Our Achievements</div>
+                  <!-- <div class="badge text-uppercase text-dark bg-dark-subtle">Our Achievements</div> -->
                   <h2 class="heading_text mb-0">
-                    Shaping Your Future with Online Banking
+                    Shaping The Future of Money Transfer
                   </h2>
                 </div>
                 <div class="col-lg-5">
                   <p class="heading_description mb-0">
-                    With our comprehensive banking solution, you'll find that one card is  truly enough. Our all-in-one card combines the functionality of multiple cards into a single, convenient solution, clutter and simplifying your wallet.
+                    With a seamless user experience, top-tier security, and instant transactions, we make transferring money simple—so you can focus on what matters most.
                   </p>
                 </div>
               </div>
@@ -592,11 +592,10 @@
               <div class="col-lg-4">
                 <div class="funfact_block style_2" style="background-image: url('assets/images/shapes/funfact_bg_1.svg');">
                   <div class="funfact_value">
-                    <span class="odometer" data-count="80">0</span>
-                    <span>%</span>
+                    <span>Fast Transfers</span>
                   </div>
                   <h4 class="funfact_title mb-0">
-                    Users primarily access their accounts via mobile for with convenient banking on the go.
+                    Send money in minutes, not days. Our lightning-fast system ensures quick delivery worldwide.
                   </h4>
                 </div>
                 <div class="funfact_block style_2" style="background-image: url('assets/images/shapes/funfact_bg_2.svg');">
@@ -612,7 +611,7 @@
               <div class="col-lg-4">
                 <div class="money_transactions_card bg-dark" style="background-image: url('assets/images/shapes/shape_line.svg');">
                   <div class="image_block">
-                    <img src="assets/images/about/transactions_card_image.webp" alt="Transactions Card">
+                    <img src="assets/images/mobile_app_image.webp" alt="Transactions Card">
                   </div>
                   <a class="btn bg-primary text-dark" href="pricing.html">
                     <span class="btn_label">Learn More</span>
