--- a/index_online_banking.html
+++ b/index_online_banking.html
@@ -959,7 +959,7 @@
                   </svg>
                   <div class="site_logo">
                     <a class="site_link" href="index.html">
-                      <img src="assets/images/site_logo/site_logo_white.svg" alt="Site Logo White">
+                      <img src="assets/images/site_logo/site_logo_white.png" alt="Site Logo White">
                     </a>
                   </div>
                   <svg width="193" height="25" viewBox="0 0 193 25" fill="none" xmlns="http://www.w3.org/2000/svg">
