--- a/services.html
+++ b/services.html
@@ -60,8 +60,8 @@
               <div class="col-lg-3 col-5">
                 <div class="site_logo">
                   <a class="site_link" href="index.html">
-                    <img src="assets/images/site_logo/site_logo_white.svg" alt="Site Logo White">
-                    <img src="assets/images/site_logo/site_logo_black.svg" alt="Site Logo Black">
+                    <img src="assets/images/site_logo/site_logo_white.png" alt="Site Logo White">
+                    <img src="assets/images/site_logo/site_logo_black.png" alt="Site Logo Black">
                   </a>
                 </div>
               </div>
@@ -69,82 +69,83 @@
                 <nav class="main_menu navbar navbar-expand-lg">
                   <div class="main_menu_inner collapse navbar-collapse justify-content-lg-center" id="main_menu_dropdown">
                     <ul class="main_menu_list unordered_list justify-content-center">
-                      <li class="dropdown">
+                      <li class="active">
                         <a class="nav-link" href="index.html" id="home_submenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Home
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="home_submenu">
+                        <!-- <ul class="dropdown-menu" aria-labelledby="home_submenu">
                           <li><a href="index.html">Investment Solution</a></li>
-                          <li><a href="index_online_banking.html">Online Banking</a></li>
+                          <li class="active"><a href="index_online_banking.html">Online Banking</a></li>
                           <li><a href="index_payment_solutions.html">Payment Solutions</a></li>
                           <li><a href="index_insurance.html">Insurance</a></li>
                           <li><a href="index_car_insurance.html">Car Insurance</a></li>
                           <li><a href="index_financial_consulting.html">Financial Consulting</a></li>
-                        </ul>
+                        </ul> -->
                       </li>
-                      <li class="dropdown active">
+                      <li class="dropdown">
                         <a class="nav-link" href="#" id="services_submenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Services
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="services_submenu">
-                          <li class="active"><a href="services.html">Our Services</a></li>
+                          <li><a href="services.html">Our Services</a></li>
                           <li><a href="service_details.html">Service Details</a></li>
+                          <li><a href="service_fees.html">Service Details</a></li>
                         </ul>
                       </li>
-                      <li class="dropdown">
-                        <a class="nav-link" href="#" id="projects_submenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Projects
+                      <li class="">
+                        <a class="nav-link" href="about.html" id="projects_submenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          About
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="projects_submenu">
+                        <!-- <ul class="dropdown-menu" aria-labelledby="projects_submenu">
                           <li><a href="projects.html">Our Projects</a></li>
                           <li><a href="project_details.html">Project Details</a></li>
-                        </ul>
+                        </ul> -->
                       </li>
-                      <li class="dropdown">
-                        <a class="nav-link" href="#" id="pages_submenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <!-- <li class="dropdown">
+                        <a class="nav-link" href="#" id="pages_submenu" role="button" aria-expanded="false">
                           Pages
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="pages_submenu">
                           <li><a href="contact.html">Help Center</a></li>
                           <li class="dropdown">
-                            <a class="nav-link" href="#" id="blog_submenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link" href="#" id="blog_submenu" role="button" aria-expanded="false">
                               Blogs
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="blog_submenu">
                               <li><a href="blog.html">Our Blogs</a></li>
                               <li><a href="blog_details.html">Blog Details</a></li>
                             </ul>
-                          </li>
-                          <li class="dropdown">
-                            <a class="nav-link" href="#" id="career_submenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                              Career
+                          </li> -->
+                          <li class="">
+                            <a class="nav-link" href="contact.html" id="career_submenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              Contact
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="career_submenu">
+                            <!-- <ul class="dropdown-menu" aria-labelledby="career_submenu">
                               <li><a href="career.html">Join Us</a></li>
                               <li><a href="career_details.html">Job Details</a></li>
-                            </ul>
+                            </ul> -->
                           </li>
-                          <li><a href="error.html">404 Error</a></li>
+                          <!-- <li><a href="error.html">404 Error</a></li> -->
                         </ul>
                       </li>
-                      <li><a href="pricing.html">Pricing</a></li>
+                      <!-- <li><a href="pricing.html">Pricing</a></li> -->
                     </ul>
                   </div>
                 </nav>
               </div>
               <div class="col-lg-3 col-5">
-                <ul class="btns_group p-0 unordered_list justify-content-end">
+                <ul class="btns_group ob-header-btn p-0 unordered_list justify-content-end">
                   <li>
                     <button class="mobile_menu_btn" type="button" data-bs-toggle="collapse" data-bs-target="#main_menu_dropdown" aria-expanded="false" aria-label="Toggle navigation">
                       <i class="far fa-bars"></i>
                     </button>
                   </li>
                   <li>
-                    <a class="hotline_btn" href="tel:8005550199">
+                    <a class="btn btn-outline-light" href="#!">
                       <span class="btn_icon">
-                        <img src="assets/images/icons/icon_calling.svg" alt="Icon Calling">
+                        <i class="fa-solid fa-user"></i>
                       </span>
-                      <span class="btn_label" data-text="Hotline: (800) 555‑0199">Hotline: (800) 555‑0199</span>
+                      <span class="btn_label">Login</span>
                     </a>
                   </li>
                 </ul>
