--- a/service_details.html
+++ b/service_details.html
@@ -70,7 +70,7 @@
                   <div class="main_menu_inner collapse navbar-collapse justify-content-lg-center" id="main_menu_dropdown">
                     <ul class="main_menu_list unordered_list justify-content-center">
                       <li class="active">
-                        <a class="nav-link" href="index.html" id="home_submenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link" href="index.html" id="home_submenu" role="button" aria-expanded="false">
                           Home
                         </a>
                         <!-- <ul class="dropdown-menu" aria-labelledby="home_submenu">
@@ -93,7 +93,7 @@
                         </ul>
                       </li>
                       <li class="">
-                        <a class="nav-link" href="about.html" id="projects_submenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link" href="about.html" id="projects_submenu" role="button" aria-expanded="false">
                           About
                         </a>
                         <!-- <ul class="dropdown-menu" aria-labelledby="projects_submenu">
@@ -117,7 +117,7 @@
                             </ul>
                           </li> -->
                           <li class="">
-                            <a class="nav-link" href="contact.html" id="career_submenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link" href="contact.html" id="career_submenu" role="button"  aria-expanded="false">
                               Contact
                             </a>
                             <!-- <ul class="dropdown-menu" aria-labelledby="career_submenu">
