--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="Finance & Consulting Bootstrap Site Template">
     <meta name="author" content="XpressBuddy">
 
-    <title>Contact Us – Synox – Finance & Consulting Site Template.</title>
+    <title>Online Banking – PerryLeo – Breaking borders, one payment at a time.</title>
     <link rel="shortcut icon" href="assets/images/site_logo/favourite_icon.webp">
 
     <!-- Fraimwork - CSS Include -->
