--- a/service_fees.html
+++ b/service_fees.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="Finance & Consulting Bootstrap Site Template">
     <meta name="author" content="XpressBuddy">
 
-    <title>Our Pricing – Synox – Finance & Consulting Site Template.</title>
+    <title>Online Banking – PerryLeo – Breaking borders, one payment at a time.</title>
     <link rel="shortcut icon" href="assets/images/site_logo/favourite_icon.webp">
 
     <!-- Fraimwork - CSS Include -->
@@ -89,7 +89,7 @@
                         <ul class="dropdown-menu" aria-labelledby="services_submenu">
                           <li><a href="services.html">Our Services</a></li>
                           <li><a href="service_details.html">Service Details</a></li>
-                          <li><a href="service_fees.html">Service Details</a></li>
+                          <li><a href="service_fees.html">Service Fees</a></li>
                         </ul>
                       </li>
                       <li class="">
