changed home page to download

--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
                   <li>
                     <a class="btn btn-outline-light" href="#!">
                       <span class="btn_icon">
-                        <i class="fa-solid fa-user"></i>
+                        <i class="fa-solid fa-download"></i>
                       </span>
-                      <span class="btn_label">Login</span>
+                      <span class="btn_label">Download</span>
                     </a>
                   </li>
                 </ul>
