--- a/about.html
+++ b/about.html
@@ -351,7 +351,7 @@
               <div class="col-lg-4">
                 <a class="image_hover_effect_block" href="project_details.html">
                   <span class="image_wrap">
-                    <img src="assets/images/projects/project_image_1.webp" alt="Project Image">
+                    <img src="assets/images/projects/project_image_1.jpg" alt="Project Image">
                   </span>
                   <span class="content_wrap">
                     <strong class="item_title">Finance Consultancy</strong>
@@ -362,7 +362,7 @@
               <div class="col-lg-8">
                 <a class="image_hover_effect_block" href="project_details.html">
                   <span class="image_wrap">
-                    <img src="assets/images/projects/project_image_2.webp" alt="Project Image">
+                    <img src="assets/images/projects/project_image_2.jpg" alt="Project Image">
                   </span>
                   <span class="content_wrap">
                     <strong class="item_title">Tax Planning for Business</strong>
@@ -370,7 +370,7 @@
                   </span>
                 </a>
               </div>
-              <div class="col-lg-4">
+              <!-- <div class="col-lg-4">
                 <a class="image_hover_effect_block" href="project_details.html">
                   <span class="image_wrap">
                     <img src="assets/images/projects/project_image_3.webp" alt="Project Image">
@@ -424,7 +424,7 @@
                     <small class="item_tag">Advisory</small>
                   </span>
                 </a>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="decoration_item shape_dollar_1 wow fadeInUp" data-wow-delay=".2s">
