--- a/services.html
+++ b/services.html
@@ -88,8 +88,8 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="services_submenu">
                           <li><a href="services.html">Our Services</a></li>
-                          <li><a href="service_details.html">Service Details</a></li>
-                          <li><a href="service_fees.html">Service Details</a></li>
+                          <!-- <li><a href="service_details.html">Service Details</a></li> -->
+                          <li><a href="service_fees.html">Service Fees</a></li>
                         </ul>
                       </li>
                       <li class="">
@@ -195,7 +195,92 @@
         </section>
         <!-- Page Header - End
         ================================================== -->
+        <section class="funfact_section section_space bg-light">
+          <div class="container">
+            <div class="heading_block style_2">
+              <div class="row align-items-lg-end justify-content-lg-between">
+                <div class="col-lg-6">
+                  <!-- <div class="badge text-uppercase text-dark bg-dark-subtle">Our Achievements</div> -->
+                  <h2 class="heading_text mb-0">
+                    Shaping The Future of Money Transfer
+                  </h2>
+                </div>
+                <div class="col-lg-5">
+                  <p class="heading_description mb-0">
+                    We believe that culture is the foundation of success. With patience and a relentless focus on excellence, we ensure that our clients receive the best financial services tailored to their needs.
+                  </p>
+                </div>
+              </div>
+            </div>
 
+            <div class="row section_decoration">
+              <div class="col-lg-4">
+                <div class="funfact_block style_2" style="background-image: url('assets/images/shapes/funfact_bg_1.svg');">
+                  <div class="imagebox_icon">
+                    <img src="assets/images/icons/icon_wallet.svg" alt="Icon Wallet">
+                  </div>
+                  <h3 class="imagebox_title">
+                    Fast Transfers
+                  </h3>
+                  <h4 class="funfact_title mb-0">
+                    Send money in minutes, not days. Our lightning-fast system ensures quick delivery worldwide.
+                  </h4>
+                </div>
+                <div class="funfact_block style_2" style="background-image: url('assets/images/shapes/funfact_bg_2.svg');">
+                  <div class="imagebox_icon">
+                    <img src="assets/images/icons/icon_chart_2.svg" alt="Icon Chart 2">
+                  </div>
+                  <h3 class="imagebox_title">
+                    Competitive Exchange Rates
+                  </h3>
+                  <h4 class="funfact_title mb-0">
+                    Save more with the best exchange rates and transparent fees—no hidden costs.
+                  </h4>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="money_transactions_card bg-dark" style="background-image: url('assets/images/shapes/shape_line.svg');">
+                  <div class="image_block">
+                    <img src="assets/images/mobile_app_image.webp" alt="Transactions Card">
+                  </div>
+                  <a class="btn bg-primary text-dark" href="pricing.html">
+                    <span class="btn_label">Learn More</span>
+                  </a>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="funfact_block style_2" style="background-image: url('assets/images/shapes/funfact_bg_3.svg');">
+                  <div class="imagebox_icon">
+                    <img src="assets/images/icons/icon_global_search.svg" alt="Icon Global Search">
+                  </div>
+                  <h3 class="imagebox_title">
+                    Global Reach
+                  </h3>
+    
+                  <h4 class="funfact_title mb-0">
+                    Transfer money to over 100 countries with multiple payout options, including bank deposits, cash pickup, and mobile wallets.
+                  </h4>
+                </div>
+                <div class="funfact_block style_2" style="background-image: url('assets/images/shapes/funfact_bg_4.svg');">
+                  <div class="imagebox_icon">
+                    <img src="assets/images/icons/icon_bitcoin.svg" alt="Icon Bitcoin">
+                  </div>
+                  <h3 class="imagebox_title">
+                    Secure & Reliable
+                  </h3>
+                
+                  <h4 class="funfact_title mb-0">
+                    We use top-tier encryption and compliance standards to keep your transactions safe.
+                  </h4>
+                </div>
+              </div>
+
+              <div class="decoration_item shape_circle_image">
+                <img src="assets/images/shapes/shape_circle_3.svg" alt="Circle Image">
+              </div>
+            </div>
+          </div>
+        </section>
         <!-- Feature Section - Start
         ================================================== -->
         <section class="feature_section section_space">
