--- a/about.html
+++ b/about.html
@@ -88,8 +88,8 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="services_submenu">
                           <li><a href="services.html">Our Services</a></li>
-                          <li><a href="service_details.html">Service Details</a></li>
-                          <li><a href="service_fees.html">Service Details</a></li>
+                          <!-- <li><a href="service_details.html">Service Details</a></li> -->
+                          <li><a href="service_fees.html">Service Fees</a></li>
                         </ul>
                       </li>
                       <li class="">
@@ -167,10 +167,10 @@
         <section class="hero_section hero_online_banking overflow-hidden section_decoration bg-dark" style="background-image: url('assets/images/backgrounds/hero_bg_noise.webp');">
           <div class="overlay" style="background-image: url('assets/images/hero/hero_pattern.svg');"></div>
           <div class="about_container container">
-            <h1 class="page_title text-white">Our Project</h1>
+            <h1 class="page_title text-white">About Us</h1>
             <ul class="breadcrumb_nav unordered_list justify-content-center">
               <li><a href="index.html">Home</a></li>
-              <li class="active"><a href="#!">Our Project</a></li>
+              <li class="active"><a href="#!">About Us</a></li>
             </ul>
           </div>
           
@@ -328,6 +328,98 @@
         <!-- Page Header - End
         ================================================== -->
 
+        <section class="service_details_section section_space section_decoration overflow-hidden">
+          <div class="container">
+            <div class="item_details_image position-relative">
+              <img src="assets/images/services/service_details_image_1.webp" alt="Project Image">
+              <a class="video_btn" href="https://www.youtube.com/watch?v=7e90gBu4pas">
+                <span class="btn_icon">
+                  <i class="fa-solid fa-play"></i>
+                </span>
+              </a>
+            </div>
+            <div class="item_details_content">
+              
+
+              <h3 class="item_details_info_heading">Perryaleo's vision</h3>
+              <p>
+                To transform lives with trusted financial services that transcend borders. We accomplish our vision
+                 by relentlessly focusing on culture. Patient is the key of success.
+                Here are six key points that can be associated with a digital Transformation Risk Management Solutions. 
+                leader helping Fortune 500 companies on their innovation agenda:
+              </p>
+              <div class="row">
+                <div class="col-md-6">
+                  <ul class="iconlist_block unordered_list_block">
+                    <li>
+                      <span class="iconlist_icon">
+                        <img src="assets/images/icons/icon_check.svg" alt="icon Check">
+                      </span>
+                      <span class="iconlist_text">Fast Transfers</span>
+                    </li>
+                    <li>
+                      <span class="iconlist_icon">
+                        <img src="assets/images/icons/icon_check.svg" alt="icon Check">
+                      </span>
+                      <span class="iconlist_text">Global Reach</span>
+                    </li>
+                    <!-- <li>
+                      <span class="iconlist_icon">
+                        <img src="assets/images/icons/icon_check.svg" alt="icon Check">
+                      </span>
+                      <span class="iconlist_text">Competitive Exchange Rates</span>
+                    </li> -->
+                  </ul>
+                </div>
+                <div class="col-md-6">
+                  <ul class="iconlist_block unordered_list_block">
+                    <li>
+                      <span class="iconlist_icon">
+                        <img src="assets/images/icons/icon_check.svg" alt="icon Check">
+                      </span>
+                      <span class="iconlist_text">Secure & Reliable</span>
+                    </li>
+                    <li>
+                      <span class="iconlist_icon">
+                        <img src="assets/images/icons/icon_check.svg" alt="icon Check">
+                      </span>
+                      <span class="iconlist_text">Competitive Exchange Rates</span>
+                    </li>
+                    <!-- <li>
+                      <span class="iconlist_icon">
+                        <img src="assets/images/icons/icon_check.svg" alt="icon Check">
+                      </span>
+                      <span class="iconlist_text">Secure & Reliable</span>
+                    </li> -->
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="decoration_item shape_dollar_1" data-parallax='{"y" : 200, "smoothness": 10}'>
+            <img src="assets/images/shapes/shape_dollar_3.webp" alt="Shape Dollar">
+          </div>
+          <div class="decoration_item shape_dollar_2" data-parallax='{"y" : 200, "smoothness": 10}'>
+            <img src="assets/images/shapes/shape_dollar_1.webp" alt="Shape Dollar">
+          </div>
+          <div class="decoration_item shape_dollar_3" data-parallax='{"y" : -200, "smoothness": 10}'>
+            <img src="assets/images/shapes/shape_dollar_2.webp" alt="Shape Dollar">
+          </div>
+
+          <div class="decoration_item shape_nate_1 wow fadeInUp">
+            <img src="assets/images/shapes/shape_nate_3.svg" alt="Shape Nate">
+          </div>
+          <div class="decoration_item shape_nate_2 wow fadeInUp">
+            <img src="assets/images/shapes/shape_nate_4.svg" alt="Shape Nate">
+          </div>
+          <div class="decoration_item shape_nate_3 wow fadeInUp">
+            <img src="assets/images/shapes/shape_nate_5.svg" alt="Shape Nate">
+          </div>
+          <div class="decoration_item shape_nate_4 wow fadeInUp">
+            <img src="assets/images/shapes/shape_nate_6.svg" alt="Shape Nate">
+          </div> 
+        </section>
+
         <!-- Project Section - Start
         ================================================== -->
         <section class="project_section section_space section_decoration overflow-hidden">
@@ -425,6 +517,22 @@
                   </span>
                 </a>
               </div> -->
+
+              <div class="heading_block heading_block_margin">
+                <div class="row justify-content-lg-between">
+                  <div class="col-lg-6">
+                    <p class="heading_description mb-0">
+                      Expand your reach and scale your customer base with Perryleo’s smart payment platform—built
+                       to seamlessly connect global businesses with efficiency and speed, minus the excessive costs.
+                    </p>
+                  </div>
+                  <div class="col-lg-5">
+                    <h2 class="heading_text mb-0">
+                      Unleash your&nbsp;business&apos; full potential&nbsp;with PerryLeo
+                    </h2>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <div class="decoration_item shape_dollar_1 wow fadeInUp" data-wow-delay=".2s">
