--- a/service_fees.html
+++ b/service_fees.html
@@ -88,7 +88,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="services_submenu">
                           <li><a href="services.html">Our Services</a></li>
-                          <li><a href="service_details.html">Service Details</a></li>
+                          <!-- <li><a href="service_details.html">Service Details</a></li> -->
                           <li><a href="service_fees.html">Service Fees</a></li>
                         </ul>
                       </li>
