--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                   <div class="image_block">
                     <img src="assets/images/mobile_app_image.webp" alt="Transactions Card">
                   </div>
-                  <a class="btn bg-primary text-dark" href="pricing.html">
+                  <a class="btn bg-primary text-dark" href="service_fees.html">
                     <span class="btn_label">Learn More</span>
                   </a>
                 </div>
