--- a/services.html
+++ b/services.html
@@ -382,7 +382,7 @@
                 <div class="col-lg-6">
                   <div class="heading_block text-center text-white">
                     <h2 class="heading_text">
-                      What help you with
+                      What we help you with
                     </h2>
                     <p class="heading_description mb-0 text-muted">
                       A seamless, secure, and affordable money transfer experience 
