--- a/service_fees.html
+++ b/service_fees.html
@@ -510,64 +510,21 @@
               <div class="pricing_block bg-dark style_2">
                 <div class="pricing_amount">
                   <div class="pricing_amount_yearly">
-                    <span>Payment Channels</span>
+                    <span>Pricing</span>
                     <!-- <small>Here is a list of the payment channels supported by PerryLeo</small> -->
                   </div>
                 </div>
                 <div class="pricing_features text-muted">
-                  <h3 class="features_title font-weight-bold">Here is a list of the payment channels supported by PerryLeo</h3>
-                  <ul class="iconlist_block unordered_list_block">
-                    <li>
-                      <span class="iconlist_icon"><i class="fa-regular fa-check"></i></span>
-                      <span class="iconlist_text">Pay with Cards</span>
-                    </li>
-                    <li>
-                      <span class="iconlist_icon"><i class="fa-regular fa-check"></i></span>
-                      <span class="iconlist_text">Pay with Bank</span>
-                    </li>
-                    <li>
-                      <span class="iconlist_icon"><i class="fa-regular fa-check"></i></span>
-                      <span class="iconlist_text">Pay with Mpesa</span>
-                    </li>
-                    <li>
-                      <span class="iconlist_icon"><i class="fa-regular fa-check"></i></span>
-                      <span class="iconlist_text">Pay with QR code</span>
-                    </li>
-                    <li>
-                      <span class="iconlist_icon"><i class="fa-regular fa-check"></i></span>
-                      <span class="iconlist_text">Pay with Mobile Money</span>
-                    </li>
-                    <li>
-                      <span class="iconlist_icon"><i class="fa-regular fa-check"></i></span>
-                      <span class="iconlist_text">Pay with USSD</span>
-                    </li>
-                  </ul>
-                </div>
-                <div class="pricing_features text-muted">
-                  <!-- <h3 class="features_title">Featured Include:</h3> -->
-                  <ul class="iconlist_block unordered_list_block">
-                    <li>
-                      <span class="iconlist_icon"><i class="fa-regular fa-check"></i></span>
-                      <span class="iconlist_text">Pay with Bank Transfer</span>
-                    </li>
-                    
-                    <li>
-                      <span class="iconlist_icon"><i class="fa-regular fa-check"></i></span>
-                      <span class="iconlist_text">Pay with Google Pay</span>
-                    </li>
-                    <li>
-                      <span class="iconlist_icon"><i class="fa-regular fa-check"></i></span>
-                      <span class="iconlist_text">Pay with Apple Pay</span>
-                    </li>
-                    <li>
-                      <span class="iconlist_icon"><i class="fa-regular fa-check"></i></span>
-                      <span class="iconlist_text">Pay with eNaira</span>
-                    </li>
-                    <li>
-                      <span class="iconlist_icon"><i class="fa-regular fa-check"></i></span>
-                      <span class="iconlist_text">Pay with Opay</span>
-                    </li>
-                  </ul>
+                  <p class="">
+                    PerryLeo charges a transaction fee on every 
+                    payment processed depending on your country/region and where your customer is paying from. 
+                    If your customer makes payment in a currency other than your local currency, 
+                    it is regarded as an international payment for settlement & pricing</p>
+                    <p>For Nigerian merchants, please note that all transactions made with a Naira card will be settled in Naira irrespective of the currency you are purchasing in. 
+                    This is to comply with the dollarisation policy in Nigeria.
+                    All local Naira payments have a maximum transaction fee of NGN 2,000. This means we won't charge you more than NGN 2,000 
+                    for a Naira transaction regardless of how much it is.
+                    The table below shows the breakdown of transaction fees for different countries and regions.</p>
                 </div>
               </div>
             </div>
