--- a/service_fees.html
+++ b/service_fees.html
@@ -400,34 +400,34 @@
                     balance to a bank or mobile money account in a different currency. However, there are some limitations on these transfers 
                     due to regulatory requirements in various countries.
                   </h3>
-                    <table>
-                      <tbody>
-                        <tr>
-                          <th><p>Balance</p></th>
-                          <th><p>Currencies you can transfer to</p></th>
+                    <table class="table">
+                      <tbody class="tbody">
+                        <thead class="thead">
+                          <th class="th"><p>Balance</p></th>
+                          <th class="th"><p>Currencies you can transfer to</p></th>
                         </tr>
-                        <tr>
-                          <td><p>AED ARS AUD CAD CHF EUR GHS ILS INR KES MAD MUR MYR NGN NOK NZD PEN PLN RUB RWF SAR SEK SGD SLL UGX XAF XOF ZMK JPY ZMW</p></td>
-                          <td><p>AED, ARS, AUD, BRL, CAD, CHF, CZK, ETB, EUR, GBP, GHS, ILS, INR, JPY, KES, MAD, MUR, MYR, NGN, NOK, NZD, PEN, PLN, RUB, RWF, SAR, SEK, SGD, SLL, TZS, UGX, USD, XAF, XOF, ZAR, ZMK, ZMW, MWK</p></td>
+                        <tr class="tr">
+                          <td class="td"><p>AED ARS AUD CAD CHF EUR GHS ILS INR KES MAD MUR MYR NGN NOK NZD PEN PLN RUB RWF SAR SEK SGD SLL UGX XAF XOF ZMK JPY ZMW</p></td>
+                          <td class="td"><p>AED, ARS, AUD, BRL, CAD, CHF, CZK, ETB, EUR, GBP, GHS, ILS, INR, JPY, KES, MAD, MUR, MYR, NGN, NOK, NZD, PEN, PLN, RUB, RWF, SAR, SEK, SGD, SLL, TZS, UGX, USD, XAF, XOF, ZAR, ZMK, ZMW, MWK</p></td>
                         </tr>
-                        <tr>
-                          <td><p>BRL CZK ETB</p></td>
-                          <td><p>BRL, AED, ARS, AUD, CAD, CHF, CZK, ETB, EUR, GBP, GHS, ILS, INR, JPY, KES, MAD, MUR, MYR, NGN, NOK, NZD, PEN, PLN, RUB, RWF, SAR, SEK, SGD, SLL, TZS, UGX, USD, XAF, XOF, ZAR, ZMK, ZMW, MWK</p></td>
+                        <tr class="tr">
+                          <td class="td"><p>BRL CZK ETB</p></td>
+                          <td class="td"><p>BRL, AED, ARS, AUD, CAD, CHF, CZK, ETB, EUR, GBP, GHS, ILS, INR, JPY, KES, MAD, MUR, MYR, NGN, NOK, NZD, PEN, PLN, RUB, RWF, SAR, SEK, SGD, SLL, TZS, UGX, USD, XAF, XOF, ZAR, ZMK, ZMW, MWK</p></td>
                         </tr>
-                        <tr>
-                          <td><p>TZS ZAR</p></td>
-                          <td><p>AED, ARS, AUD, CAD, CHF, CZK, ETB, EUR, GBP, GHS, ILS, INR, JPY, KES, MAD, MUR, MYR, NGN, NOK, NZD, PEN, PLN, RUB, RWF, SAR, SEK, SGD, SLL, TZS, UGX, USD, XAF, XOF, ZAR, ZMK, ZMW</p></td>
+                        <tr class="tr">
+                          <td class="td"><p>TZS ZAR</p></td>
+                          <td class="td"><p>AED, ARS, AUD, CAD, CHF, CZK, ETB, EUR, GBP, GHS, ILS, INR, JPY, KES, MAD, MUR, MYR, NGN, NOK, NZD, PEN, PLN, RUB, RWF, SAR, SEK, SGD, SLL, TZS, UGX, USD, XAF, XOF, ZAR, ZMK, ZMW</p></td>
                         </tr>
-                        <tr>
-                          <td><p>GBP USD</p></td>
-                          <td><p>AED, ARS, AUD, BRL, CAD, CHF, CZK, EGP, ETB, EUR, GBP, GHS, ILS, INR, JPY, KES, MAD, MUR, MYR, NGN, NOK, NZD, PEN, PLN, RUB, RWF, SAR, SEK, SGD, SLL, TZS, UGX, USD, XAF, XOF, ZAR, ZMK, ZMW, MWK</p></td>
+                        <tr class="tr">
+                          <td class="td"><p>GBP USD</p></td>
+                          <td class="td"><p>AED, ARS, AUD, BRL, CAD, CHF, CZK, EGP, ETB, EUR, GBP, GHS, ILS, INR, JPY, KES, MAD, MUR, MYR, NGN, NOK, NZD, PEN, PLN, RUB, RWF, SAR, SEK, SGD, SLL, TZS, UGX, USD, XAF, XOF, ZAR, ZMK, ZMW, MWK</p></td>
                         </tr>
-                        <tr>
-                          <td><p>MWK</p></td>
-                          <td><p>MWK</p></td>
+                        <tr class="tr">
+                          <td class="td"><p>MWK</p></td>
+                          <td class="td"><p>MWK</p></td>
                         </tr>
-                        <tr>
-                          <td><p>TRY</p></td><td><p>NGN</p></td>
+                        <tr class="tr">
+                          <td class="td"><p>TRY</p></td><td class="td"><p>NGN</p></td>
                         </tr>
                       </tbody>
                     </table>
