--- a/services.html
+++ b/services.html
@@ -284,7 +284,7 @@
                 <div class="col-lg-5">
                   <p class="heading_description mb-0">
                     At Perryleo, we empower large-scale enterprises with intelligent, seamless, 
-                    and cost-effective global payment solutions. Our platform is designed to enhance efficiency/jnk., 
+                    and cost-effective global payment solutions. Our platform is designed to enhance efficiency, 
                     improve cash flow, and optimize international transactions, 
                     ensuring that your business operates smoothly across borders.
                   </p>
