--- a/about.html
+++ b/about.html
@@ -90,6 +90,8 @@
                           <li><a href="services.html">Our Services</a></li>
                           <!-- <li><a href="service_details.html">Service Details</a></li> -->
                           <li><a href="service_fees.html">Service Fees</a></li>
+                          <li><a href="privacy_policy.html">Privacy Policy</a></li>
+                          <li><a href="delete_account.html">Delete Account</a></li>
                         </ul>
                       </li>
                       <li class="">
@@ -517,7 +519,6 @@
                   </span>
                 </a>
               </div> -->
-<<<<<<< Updated upstream
 
               <div class="heading_block heading_block_margin">
                 <div class="row justify-content-lg-between">
@@ -534,8 +535,6 @@
                   </div>
                 </div>
               </div>
-=======
->>>>>>> Stashed changes
             </div>
           </div>
           <div class="decoration_item shape_dollar_1 wow fadeInUp" data-wow-delay=".2s">
