--- a/fees_by_countries.html
+++ b/fees_by_countries.html
@@ -90,6 +90,8 @@
                           <li><a href="services.html">Our Services</a></li>
                           <!-- <li><a href="service_details.html">Service Details</a></li> -->
                           <li><a href="service_fees.html">Service Fees</a></li>
+                          <li><a href="privacy_policy.html">Privacy Policy</a></li>
+                          <li><a href="delete_account.html">Delete Account</a></li>
                         </ul>
                       </li>
                       <li class="">
@@ -482,7 +484,132 @@
                           </tr>
                         </tbody>
                       </table>
-                
+
+                    <h3 class="table_title">North America</h3>
+                    <table class="table">
+                    <thead class="thead">
+                        <tr class="tr">
+                        <th class="th"><p>Country</p></th>
+                        <th class="th"><p>Local cards</p></th>
+                        <th class="th"><p>International cards</p></th>
+                        <th class="th"><p>Mobile Money</p></th>
+                        </tr>
+                    </thead>
+                    <tbody class="tbody">
+                        <tr class="tr">
+                        <td class="td"><p>USA</p></td>
+                        <td class="td"><p>2.9%</p></td>
+                        <td class="td"><p>4.8%</p></td>
+                        <td class="td"><p>2.9%</p></td>
+                        </tr>
+                    </tbody>
+                    </table>
+
+                    <h3 class="table_title">South America</h3>
+
+                    <table class="table">
+                    <thead class="thead">
+                        <tr class="tr">
+                        <th class="th"><p>Country</p></th>
+                        <th class="th"><p>Local cards</p></th>
+                        <th class="th"><p>International cards</p></th>
+                        <th class="th"><p>Mobile Money</p></th>
+                        <th class="th"><p>ACH</p></th>
+                        </tr>
+                    </thead>
+                    <tbody class="tbody">
+                        <tr class="tr">
+                        <td class="td"><p>Colombia</p></td>
+                        <td class="td"><p>4.5%</p></td>
+                        <td class="td"><p>4.8%</p></td>
+                        <td class="td"><p>4.5%</p></td>
+                        <td class="td"><p>-</p></td>
+                        </tr>
+                        <tr class="tr">
+                        <td class="td"><p>Peru</p></td>
+                        <td class="td"><p>4%</p></td>
+                        <td class="td"><p>4.8%</p></td>
+                        <td class="td"><p>4%</p></td>
+                        <td class="td"><p>-</p></td>
+                        </tr>
+                        <tr class="tr">
+                        <td class="td"><p>Chile</p></td>
+                        <td class="td"><p>4.5%</p></td>
+                        <td class="td"><p>4.8%</p></td>
+                        <td class="td"><p>4.5%</p></td>
+                        <td class="td"><p>-</p></td>
+                        </tr>
+                        <tr class="tr">
+                        <td class="td"><p>Brazil</p></td>
+                        <td class="td"><p>4%</p></td>
+                        <td class="td"><p>4.8%</p></td>
+                        <td class="td"><p>4%</p></td>
+                        <td class="td"><p>3%</p></td>
+                        </tr>
+                        <tr class="tr">
+                        <td class="td"><p>Mexico</p></td>
+                        <td class="td"><p>3.5%</p></td>
+                        <td class="td"><p>4.8%</p></td>
+                        <td class="td"><p>3.5%</p></td>
+                        <td class="td"><p>2.5%</p></td>
+                        </tr>
+                        <tr class="tr">
+                        <td class="td"><p>Argentina</p></td>
+                        <td class="td"><p>4%</p></td>
+                        <td class="td"><p>4.8%</p></td>
+                        <td class="td"><p>4%</p></td>
+                        <td class="td"><p>-</p></td>
+                        </tr>
+                    </tbody>
+                    </table>
+
+                <h3 class="table_title">Europe</h3>
+                <table class="table">
+                    <thead class="thead">
+                        <tr class="tr">
+                        <th class="th"><p>Country</p></th>
+                        <th class="th"><p>Local cards</p></th>
+                        <th class="th"><p>International cards</p></th>
+                        </tr>
+                    </thead>
+                    <tbody class="tbody">
+                        <tr class="tr">
+                        <td class="td"><p>SEPA countries</p></td>
+                        <td class="td"><p>2.9%</p></td>
+                        <td class="td"><p>4.8%</p></td>
+                        </tr>
+                        <tr class="tr">
+                        <td class="td"><p>UK</p></td>
+                        <td class="td"><p>2.9%</p></td>
+                        <td class="td"><p>4.8%</p></td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <h3 class="table_title">Global alternative payment methods</h3>
+                <table class="table">
+                    <thead class="thead">
+                        <tr class="tr">
+                        <th class="th"><p>Payment method</p></th>
+                        <th class="th"><p></p></th>
+                        </tr>
+                    </thead>
+                    <tbody class="tbody">
+                        <tr class="tr">
+                        <td class="td"><p>Google pay</p></td>
+                        <td class="td"><p>3.8%</p></td>
+                        </tr>
+                        <tr class="tr">
+                        <td class="td"><p>Apple pay</p></td>
+                        <td class="td"><p>3.8%</p></td>
+                        </tr>
+                        <tr class="tr">
+                        <td class="td"><p>Paypal</p></td>
+                        <td class="td"><p>4.4% + $0.30 fixed fee</p></td>
+                        </tr>
+                    </tbody>
+                    </table>
+
                 </div>
                 
               </div>
