--- a/services.html
+++ b/services.html
@@ -90,6 +90,8 @@
                           <li><a href="services.html">Our Services</a></li>
                           <!-- <li><a href="service_details.html">Service Details</a></li> -->
                           <li><a href="service_fees.html">Service Fees</a></li>
+                          <li><a href="privacy_policy.html">Privacy Policy</a></li>
+                          <li><a href="delete_account.html">Delete Account</a></li>
                         </ul>
                       </li>
                       <li class="">
