--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     </button>
                   </li>
                   <li>
-                    <a class="btn btn-outline-light" href="#!">
+                    <a class="btn btn-outline-light" href="download.html">
                       <span class="btn_icon">
                         <i class="fa-solid fa-download"></i>
                       </span>
