--- a/fees_by_countries.html
+++ b/fees_by_countries.html
@@ -143,11 +143,11 @@
                     </button>
                   </li>
                   <li>
-                    <a class="btn btn-outline-light" href="#!">
+                    <a class="btn btn-outline-light" href="download.html">
                       <span class="btn_icon">
-                        <i class="fa-solid fa-user"></i>
+                        <i class="fa-solid fa-download"></i>
                       </span>
-                      <span class="btn_label">Login</span>
+                      <span class="btn_label">Download</span>
                     </a>
                   </li>
                 </ul>
