--- a/service_fees.html
+++ b/service_fees.html
@@ -143,11 +143,11 @@
                     </button>
                   </li>
                   <li>
-                    <a class="btn btn-outline-light" href="#!">
+                    <a class="btn btn-outline-light" href="download.html">
                       <span class="btn_icon">
-                        <i class="fa-solid fa-user"></i>
+                        <i class="fa-solid fa-download"></i>
                       </span>
-                      <span class="btn_label">Login</span>
+                      <span class="btn_label">Download</span>
                     </a>
                   </li>
                 </ul>
@@ -467,7 +467,7 @@
                       <img src="assets/images/icons/icon_visa.svg" alt="">
                     </div> -->
                     <div>
-                      <span class="fees_percent">2.9%</span>&nbsp;<span>per transaction</span>
+                      <span class="fees_percent">4.8%</span>&nbsp;<span>per transaction</span>
                     </div>
                     <ul class="iconlist_block unordered_list_block">
                       <li>
