--- a/download.html
+++ b/download.html
@@ -169,7 +169,7 @@
 
         <!-- App Store Section - Start
         ================================================== -->
-        <section class="appstore_section section_decoration section_space section_space_2" style="background-image: url('assets/images/backgrounds/app_store_bg_1.webp');">
+        <section class="appstore_section section_decoration section_space_2" style="background-image: url('assets/images/backgrounds/app_store_bg_1.webp');">
           <div class="container">
             <div class="row justify-content-lg-between">
               <div class="col-lg-5 order-lg-last">
