--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -483,7 +483,7 @@
                   <div>
                     <h3 class="item_details_info_heading">Cookies and Tracking Technologies</h3>
                     <p>
-                      We use cookies and similar tools to enhance user experience, analyze traffic, 
+                      We use cookies and similar tools to enhance user experience, analyze traffic,
                       and personalize content. You can manage cookie preferences via your browser settings.
                     </p>
 
@@ -492,7 +492,8 @@
                   <div>
                     <h3 class="item_details_info_heading">Retention of Data</h3>
                     <p>
-                      We retain your information only as long as necessary to fulfill the purposes outlined in this policy, 
+                      We retain your information only as long as necessary to fulfill the purposes outlined in this
+                      policy,
                       comply with legal obligations, or resolve disputes.
                     </p>
 
@@ -501,7 +502,8 @@
                   <div>
                     <h3 class="item_details_info_heading">Updates to This Policy</h3>
                     <p>
-                      We may update this Privacy Policy periodically. Changes will be posted on our Platform with an updated 
+                      We may update this Privacy Policy periodically. Changes will be posted on our Platform with an
+                      updated
                       “Last Revised” date. Continued use of the Platform constitutes acceptance of the revised policy.
                     </p>For questions, concerns, or requests regarding this Privacy Policy or your data, contact us at:
                     Email: [Insert Privacy Contact Email]
@@ -512,15 +514,15 @@
                   <div>
                     <h3 class="item_details_info_heading">Contact Us</h3>
                     <p>
-                      <p>
-                        For questions, concerns, or requests regarding this Privacy Policy or your data, contact us at:
-                      </p>
-                      <p>
-                        Phone: +234&nbsp;704&nbsp;888&nbsp;7066, +49&nbsp;179&nbsp;1107305
-                      </p>
-                      <p>
-                        Address: Iyekekpolor No 26, Benin city Edo State.
-                      </p>
+                    <p>
+                      For questions, concerns, or requests regarding this Privacy Policy or your data, contact us at:
+                    </p>
+                    <p>
+                      Phone: +234&nbsp;704&nbsp;888&nbsp;7066, +49&nbsp;179&nbsp;1107305
+                    </p>
+                    <p>
+                      Address: Iyekekpolor No 26, Benin city Edo State.
+                    </p>
                     </p>
 
                   </div>
